deployments/pathweb/home-assistant/traefik-middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: home-assistant-rewrite-serviceworker-paths
spec:
  plugin:
    rewriteBody:
      rewrites:
        - regex: '(RegExp\("\/\()(api\|auth)(\)\/\.\*"\))'
          replacement: '$1$2|outpost.goauthentik.io$3'
      logLevel: 0
      monitoring:
        types:
          - application/javascript
