deployments/pathweb/home-assistant/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: home-assistant
  annotations:
    kustomize.toolkit.fluxcd.io/force: enabled
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  serviceName: home-assistant
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
      annotations:
        k8s.v1.cni.cncf.io/networks: '[{"name":"hass-iot-network", "mac":"e7:fc:de:fb:5b:bf"}]'
        io.cilium.proxy-visibility: <Egress/53/UDP/DNS>,<Egress/80/TCP/HTTP>
    spec:
      nodeSelector:
        kubernetes.io/os: linux
        location: rfhome
      securityContext:
        fsGroup: 1000
      containers:
        - name: home-assistant
          image: homeassistant/home-assistant:stable
          ports:
            - containerPort: 8123
              name: http
              protocol: TCP
          volumeMounts:
            - name: hass-data
              mountPath: /config
            - name: homeassistant-docker-venv
              mountPath: /etc/services.d/home-assistant/run
              subPath: venv-run
          resources:
            requests:
              cpu: 50m
              memory: 500M
            limits:
              cpu: '4'
              memory: 2G
      volumes:
        - name: hass-data
          persistentVolumeClaim:
            claimName: home-assistant-data
        - name: homeassistant-docker-venv
          configMap:
            name: homeassistant-docker-venv
            defaultMode: 0755
