deployments/pathweb/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-network
spec:
  selector:
    app.kubernetes.io/name: home-assistant
  clusterIP: None
  ports:
  - port: 8123
    targetPort: 8123
    name: http
    protocol: TCP
    appProtocol: http
