deployments/pathweb/home-assistant/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  labels:
    external-dns: local-pdns
spec:
  ingressClassName: traefik-traefik
  rules:
  - host: hass.services.home.yrf.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: home-assistant
            port: 
              name: http
  tls:
    - hosts:
      - hass.services.home.yrf.me
      secretName: services-wildcard-cert
